--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ html {
 a {
     text-decoration: none;
     color: inherit;
+    cursor: pointer;
 }
 
 ul,
@@ -30,10 +31,8 @@ button {
     border: none;
     padding: 0;
     outline: none;
+    cursor: pointer;
 }
-
-/* font-family: 'PT Serif', serif;
- */
 
 .container {
     max-width: 1220px;
@@ -107,6 +106,7 @@ button {
 }
 
 /* ! SEARCH */
+
 .search__wrapper {
     padding: 60px 0 70px;
 }
@@ -132,7 +132,7 @@ button {
     line-height: 26px;
 }
 .search__form-input::placeholder {
-    font-family: "Roboto Condensed";
+    font-family: "Roboto Condensed", sans-serif;
     font-weight: 400;
     font-size: 18px;
     line-height: 24px;
@@ -156,3 +156,225 @@ button {
     top: 50%;
     transform: translateY(-50%);
 }
+
+/* ! POPULAR */
+
+.popular {
+    text-align: center;
+}
+.popular__title {
+    font-family: "PT Serif", serif;
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 64px;
+    color: #ffffff;
+    padding: 18px 10px;
+    text-align: center;
+    background-color: #000;
+}
+.popular__inner {
+    padding: 100px 0;
+    display: flex;
+    justify-content: space-between;
+}
+.popular__img {
+    width: 280px;
+    height: 280px;
+    border-radius: 50%;
+}
+.popular__item-title {
+    font-size: 24px;
+    line-height: 24px;
+    color: #888888;
+    text-align: center;
+    object-fit: cover;
+    padding: 30px 10px;
+}
+.popular__item-link {
+    display: inline-block;
+    color: #ffffff;
+    padding: 13px 48px;
+    background: #c4c4c4;
+    border: 2px solid #c4c4c4;
+    cursor: pointer;
+    transition: all 0.4s;
+}
+.popular__item-link:hover {
+    scale: 1.1;
+}
+
+/* ! ADVANTAGES */
+
+.advantages {
+    padding: 100px 0;
+}
+.advantages__inner {
+    display: flex;
+    justify-content: space-between;
+}
+.advantages__item {
+    flex-basis: 470px;
+}
+.advantages__item-title {
+    font-family: "PT Serif", serif;
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 36px;
+    margin-bottom: 20px;
+    padding-left: 136px;
+    position: relative;
+}
+.advantages__item-title::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 103px;
+    height: 103px;
+}
+.advantages__item-title--icon-1::before {
+    background-image: url("../images/clock.png");
+}
+.advantages__item-title--icon-2::before {
+    background-image: url("../images/globe.png");
+}
+.advantages__item-text {
+    margin-bottom: 42px;
+}
+.advantages__item-link {
+    color: #888888;
+    padding-left: 36px;
+    position: relative;
+    text-decoration: underline;
+}
+.advantages__item-link::before {
+    content: "";
+    position: absolute;
+    background-image: url("../images/arrow-black.svg");
+    left: 0;
+    top: -3px;
+    width: 30px;
+    height: 30px;
+}
+
+/* ! BOOK */
+
+.book {
+    min-height: 100vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    text-align: right;
+}
+.book__title {
+    font-family: "PT Serif", serif;
+    padding-top: 68px;
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 48px;
+    color: #ffffff;
+    margin: 0 0 15px auto;
+    max-width: 455px;
+}
+.book__button {
+    display: inline-block;
+    color: #ffffff;
+    background-color: #020202;
+    padding: 16px 18px;
+    cursor: pointer;
+    transition: all 0.4s;
+    line-height: 18px;
+}
+.book__button:hover {
+    scale: 1.1;
+}
+
+/* ! ABOUT */
+
+.about {
+    padding: 100px 0;
+    background-color: #020202;
+    color: #ffffff;
+}
+.about__inner {
+    display: flex;
+    justify-content: space-between;
+    /* gap: 95px; */
+}
+.about__managers {
+    width: 297px;
+}
+.about__title {
+    margin-bottom: 47px;
+    font-family: "PT Serif", serif;
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 48px;
+    text-align: center;
+}
+.about__managers-title {
+    margin-bottom: 27px;
+}
+.about__managers-items {
+    display: flex;
+    justify-content: space-between;
+}
+.about__managers-item {
+    text-align: center;
+}
+.about__managers-img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-bottom: 22px;
+}
+.about__managers-list {
+    line-height: 21px;
+    margin-bottom: 43px;
+}
+.about__managers-btn {
+    background-color: #ffffff;
+    padding: 16px 21px;
+    font-size: 18px;
+    line-height: 18px;
+}
+.about__blog {
+    width: 411px;
+}
+.about__blog-link {
+    line-height: 18px;
+    margin-bottom: 28px;
+    padding-left: 67px;
+    display: inline-block;
+    position: relative;
+}
+.about__blog-link::before {
+    content: "";
+    position: absolute;
+    background-image: url("../images/arrow-white.svg");
+    top: -7px;
+    left: 0;
+    width: 30px;
+    height: 30px;
+}
+.reviews {
+    width: 300px;
+}
+.reviews__img{
+    width: 300px;
+    height: 127px;
+    margin-bottom: 20px;
+}
+.reviews__text {
+    margin-bottom: 20px;
+}
+.about__reviews-link {
+    display: inline-block;
+    color: #020202;
+    background-color: #ffffff;
+    padding: 16px 28px;
+    line-height: 18px;
+}
+
+/* ! FOOTER */
