--- a/css/style.css
+++ b/css/style.css
@@ -213,7 +213,7 @@ button {
     justify-content: space-between;
 }
 .advantages__item {
-    flex-basis: 470px;
+    max-width: 470px;
 }
 .advantages__item-title {
     font-family: "PT Serif", serif;
@@ -394,8 +394,7 @@ button {
     width: 250px;
     margin-right: 50px;
 }
-.footer__menu-item {
-}
+
 .footer__menu-link {
     font-size: 24px;
     line-height: 36px;
@@ -445,7 +444,259 @@ button {
     line-height: 18px;
     text-align: center;
 }
-.footer__bottom{
+.footer__bottom {
     text-align: center;
     padding-bottom: 23px;
+}
+
+/* ! MEDIA */
+
+@media (max-width: 1200px) {
+    .popular__inner {
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+    .popular__item {
+        margin: 0 15px 35px 15px;
+        max-width: 50%;
+    }
+    .popular__item-img {
+        width: 400px;
+        height: 400px;
+    }
+}
+
+@media (max-width: 1140px) {
+    .about__inner {
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+    }
+    .reviews {
+        width: 100%;
+        text-align: center;
+        margin-top: 50px;
+    }
+}
+
+@media (max-width: 1000px) {
+    .advantages__inner {
+        flex-wrap: wrap;
+    }
+    .advantages__item {
+        max-width: 100%;
+        margin-bottom: 25px;
+    }
+    .advantages__item-text {
+        margin-bottom: 15px;
+    }
+    .advantages__item-title {
+        min-height: 60px;
+        padding-left: 70px;
+    }
+    .advantages__item-title::before {
+        width: 50px;
+        height: 50px;
+        background-size: cover;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+    .book {
+        min-height: 80vh;
+    }
+    .book__title {
+        padding-top: 25px;
+    }
+    .footer__top-inner {
+        flex-wrap: wrap;
+    }
+    .footer__form {
+        padding-right: 0;
+    }
+    .footer__menu-list {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        margin-bottom: 25px;
+        margin-right: 0;
+    }
+    .footer__menu-item {
+        width: 18%;
+        text-align: center;
+        display: block;
+        border: 1px solid #ffffff;
+    }
+    .footer__form {
+        margin: 0 auto;
+    }
+}
+
+@media (max-width: 920px) {
+    .footer__menu-list {
+        display: block;
+    }
+    .footer__menu-item {
+        width: 100%;
+        border: none;
+    }
+    .footer__menu-link {
+        display: block;
+        padding: 15px 0;
+    }
+}
+
+@media (max-width: 895px) {
+    .popular__item-img {
+        width: 280px;
+        height: 280px;
+    }
+    .book {
+        min-height: 600px;
+    }
+}
+
+@media (max-width: 840px) {
+    .search__form {
+        flex-wrap: wrap;
+    }
+    .search__form-label {
+        margin-right: 0;
+        margin-bottom: 10px;
+        width: 100%;
+        text-align: center;
+    }
+    .footer__top {
+        padding: 25px 0;
+    }
+    .footer__form {
+        flex-direction: column;
+        text-align: center;
+    }
+    .footer__form-label {
+        margin: 0 0 15px 0;
+    }
+    .footer__form-input {
+        margin-bottom: 15px;
+        text-align: center;
+        width: 290px;
+        max-width: 500px;
+    }
+}
+
+@media (max-width: 768px) {
+    .logo__img {
+        max-width: 250px;
+    }
+    .header__logo {
+        padding: 40px 0 30px;
+    }
+    .menu__link {
+        padding: 24px 10px 28px;
+    }
+    .slider__item {
+        min-height: 400px;
+    }
+    .search__wrapper,
+    .popular__inner,
+    .advantages {
+        padding: 25px 0;
+    }
+    .book {
+        min-height: 400px;
+    }
+}
+
+@media (max-width: 740px) {
+    .about__blog {
+        margin-top: 50px;
+    }
+    .about {
+        padding: 25px 0;
+    }
+    .about__title {
+        margin-bottom: 15px;
+        font-size: 38px;
+        line-height: 42px;
+    }
+}
+
+@media (max-width: 660px) {
+    .popular__item {
+        max-width: 100%;
+    }
+}
+
+@media (max-width: 600px) {
+    .menu__list {
+        display: block;
+    }
+    .menu__item:first-child,
+    .menu__item:last-child {
+        border-right: none;
+        border-left: none;
+    }
+    .menu__link {
+        border-right: none;
+        border-left: none;
+    }
+    .menu__item {
+        width: 100%;
+        border-bottom: 1px solid #c4c4c4;
+    }
+    .search__form-input {
+        margin: 10px;
+        width: 100%;
+    }
+    .popular__title {
+        font-size: 36px;
+        line-height: 42px;
+    }
+    .advantages__item-title {
+        font-size: 26px;
+        line-height: 28px;
+    }
+    .book__title {
+        padding-top: 20px;
+        font-size: 28px;
+        line-height: 32px;
+    }
+    .about__blog-link {
+        padding-left: 35px;
+    }
+}
+
+@media (max-width: 420px) {
+    .header__logo {
+        padding: 10px 0 10px;
+    }
+    .menu__link {
+        padding: 15px 10px 15px;
+    }
+    .popular__title {
+        font-size: 30px;
+        line-height: 34px;
+    }
+    .advantages__item-title {
+        font-size: 23px;
+        line-height: 25px;
+    }
+    .advantages__item-text {
+        font-size: 16px;
+        line-height: 18px;
+        text-align: justify;
+    }
+    .about__blog-link::before {
+        top: 50%;
+        transform: translateY(-50%);
+    }
+    .reviews__img {
+        width: 290px;
+        height: 123px;
+    }
+    .about__blog,
+    .reviews {
+        margin-top: 25px;
+    }
+    .footer_form-btn {
+        padding: 15px 35px;
+    }
 }
